# pavuc

./: .gitignore  .typos.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml  deploy.yml  doc.yml  lint.yml  test.yml
binary-crate/: Cargo.toml
binary-crate/src/: main.rs
crate/: Cargo.toml
crate/src/: lib.rs
docs/: ARCHITECTURE.md  architecture.md
examples/: pavuc.toml
libpavuc/: Cargo.toml
libpavuc/examples/: list.rs
libpavuc/src/: client.rs  error.rs  lib.rs  model.rs  volume.rs
libpavuc/src/client/: mod.rs  tests.rs
libpavuc/src/error/: mod.rs  tests.rs
libpavuc/src/model/: mod.rs  tests.rs
libpavuc/src/volume/: mod.rs  tests.rs
pavuc/: Cargo.toml
pavuc/src/: app.rs  main.rs  ui.rs
pavuc/src/app/: mod.rs  state.rs  tests.rs
pavuc/src/cli/: mod.rs  tests.rs
pavuc/src/config/: mod.rs  tests.rs
pavuc/src/logger/: mod.rs  tests.rs
pavuc/src/settings/: mod.rs  tests.rs
pavuc/src/ui/: card.rs  content.rs  footer.rs  mod.rs  popup.rs  tabs.rs  tests.rs
pavuc/src/utils/: mod.rs  tests.rs
