[workspace]
members = ["pavuc", "libpavuc"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
homepage = "https://github.com/pavuc/pavuc"
description = "A TUI 1:1 analogue to pavucontrol"
keywords = ["pulseaudio", "tui", "ratatui", "volume", "pavucontrol"]
repository = "https://github.com/pavuc/pavuc"
version = "0.1.0"

[workspace.dependencies]
libpavuc = { path = "libpavuc", version = "0.1.0" }
libpulse-binding = "2"
ratatui = "0.30"
crossterm = "0.29"
