[workspace]
members = ["pavuc", "libpavuc"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
homepage = "https://github.com/pavuc/pavuc"
description = "A pavucontrol analogue TUI"
keywords = ["pulseaudio", "tui", "ratatui", "volume", "pavucontrol"]
repository = "https://github.com/pavuc/pavuc"
version = "0.1.0"

[workspace.dependencies]
libpavuc = { path = "libpavuc", version = "0.1.0" }
libpulse-binding = "2"
ratatui = { version = "0.30", features = ["crossterm"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
