[package]
name = "libpavuc"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description = "PulseAudio control library backing pavuc, the TUI pavucontrol analogue"
keywords.workspace = true
repository.workspace = true

[dependencies]
libpulse-binding.workspace = true

[features]
default = []
