[package]
name = "pavuc"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
description = "A pavucontrol analogue TUI built with ratatui"
keywords.workspace = true
repository.workspace = true

[[bin]]
name = "pavuc"
path = "src/main.rs"

[dependencies]
libpavuc.workspace = true
ratatui.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true

[features]
default = []
